rest steps style

--- a/src/index.njk
+++ b/src/index.njk
@@ -225,14 +225,14 @@ date: Last Modified
 
             <ol class="rest-steps">
               <li>
-                <span>ステップ１：準備する</span>
+                <b>ステップ１：準備する</b>
                 <ol>
                   <li>座り心地の良い姿勢を見つけ、地面に足をしっかりとつけ、手を膝に乗せます。</li>
                   <li>もし出来れば、目も閉じましょう。</li>
                 </ol>
               </li>
               <li>
-                <span>ステップ２：考え、感じる、身体</span>
+                <b>ステップ２：考え、感じる、身体</b>
                 <ol>
                   <li>自分は今何を考えているのか、自分に問いかけます。</li>
                   <li>自分の考えに気付いたら、それがネガティブなものなのかポジティブなものなのかを考えましょう。</li>
@@ -241,7 +241,7 @@ date: Last Modified
                 </ol>
               </li>
               <li>
-                <span>ステップ３：呼吸を意識する</span>
+                <b>ステップ３：呼吸を意識する</b>
                 <ol>
                   <li>息を吸う時と吐く時の音に耳を澄まします。</li>
                   <li>手をお腹に置き、呼吸と共に動くのを感じましょう。</li>
@@ -250,14 +250,14 @@ date: Last Modified
                 </ol>
               </li>
               <li>
-                <span>ステップ４：元に戻る</span>
+                <b>ステップ４：元に戻る</b>
                 <ol>
                   <li>全身の感覚に集中します。</li>
                   <li>部屋の中の音に耳を澄ましましょう。</li>
                 </ol>
               </li>
               <li>
-                <span>ステップ５：回想</span>
+                <b>ステップ５：回想</b>
                 <ol>
                   <li>先程までと気持ちが違うか、確認してみます。</li>
                   <li>準備ができたら目を開けましょう。 </li>
