--- a/src/style/main.css
+++ b/src/style/main.css
@@ -28,6 +28,11 @@ ul ul {
   margin-top: 0.5em;
 }
 
+.summary {
+  margin: 2em 0;
+  font-weight: bold;
+}
+
 .rest-steps {
   padding-left: 0;
   list-style: none;
