s/子供/子ども/

--- a/src/index.njk
+++ b/src/index.njk
@@ -71,7 +71,7 @@ date: Last Modified
             <ul>
               <li>子どもが好きな話題を話してみましょう。例えばスポーツ、音楽、有名人、友達の事などでも良いです。</li>
               <li>一緒に好きな料理を作ってみましょう</li>
-              <li>子供の好きな音楽に合わせて一緒に運動してみましょう。</li>
+              <li>子どもの好きな音楽に合わせて一緒に運動してみましょう。</li>
             </ul>
           </section>
 
