--- a/src/index.njk
+++ b/src/index.njk
@@ -27,6 +27,29 @@ date: Last Modified
     <main>
       <article>
         <h1>今、子どもとどう付き合うか？<abbr title="World Health Organization">WHO</abbr>から全世界の保護者たちへ。</h1>
+        <details>
+          <summary>目次</summary>
+          <ol>
+            <li>
+              <a href="#1-One-on-One-Time">１対１の時間</a>
+            </li>
+            <li>
+              <a href="#2-Keeping-It-Positive">肯定的でいましょう</a>
+            </li>
+            <li>
+              <a href="#3-Structure-Up">新しい日課を作る</a>
+            </li>
+            <li>
+              <a href="#4-Bad-Behavior">悪い行い</a>
+            </li>
+            <li>
+              <a href="#Keep-Calm-and-Manage-Stress">焦らずにストレスマネジメント</a>
+            </li>
+            <li>
+              <a href="#Talking-about-COVID-19">新型コロナウイルスについて話をする</a>
+            </li>
+          </ol>
+        </details>
         <section id="1-One-on-One-Time">
           <h2>1. １対１の時間</h2>
           <p>仕事にいけない、学校が閉まる、お金はどうなるのか…など、ストレスを感じたり困惑したりするのは普通のことです。あなただけではありません。</p>
