目次をデフォルトオープンにする

--- a/src/index.njk
+++ b/src/index.njk
@@ -27,7 +27,7 @@ date: Last Modified
     <main>
       <article>
         <h1>今、子どもとどう付き合うか？<abbr title="World Health Organization">WHO</abbr>から全世界の保護者たちへ。</h1>
-        <details>
+        <details open="true">
           <summary>目次</summary>
           <ol>
             <li>
