--- a/src/index.njk
+++ b/src/index.njk
@@ -9,12 +9,12 @@ date: Last Modified
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>今、子どもとどう付き合うか？WHOから全世界の保護者たちへ。</title>
     <link rel="stylesheet" href="/style.css"/>
+    <meta property="og:title" content="今、子どもとどう付き合うか？WHOから全世界の保護者たちへ。"/>
+    <meta property="og:type" content="website"/>
     <!--
     <meta name="description" content=""/>
-    <meta property="og:title" content=""/>
     <meta property="og:description" content=""/>
     <meta property="og:url" content=""/>
-    <meta property="og:type" content="website"/>
     <meta property="og:image" content=""/>
     <meta property="og:image:secure_url" content=""/>
     <meta property="og:image:width" content="1200"/>
