6番目のセクションidにナンバリングがなかったのでつけた

--- a/src/index.njk
+++ b/src/index.njk
@@ -44,7 +44,7 @@ date: Last Modified
           <a href="#5-Keep-Calm-and-Manage-Stress">焦らずにストレスマネジメント</a>
         </li>
         <li>
-          <a href="#Talking-about-COVID-19">新型コロナウイルスについて話をする</a>
+          <a href="#6-Talking-about-COVID-19">新型コロナウイルスについて話をする</a>
         </li>
       </ol>
 
@@ -293,7 +293,7 @@ date: Last Modified
         </section>
       </section>
 
-      <section id="Talking-about-COVID-19">
+      <section id="6-Talking-about-COVID-19">
         <h2>6. 新型コロナウイルスについて話をする</h2>
         <p>
             子どもとしっかり話せる環境を作りましょう。子どもはもう何か知っているかもしれません。沈黙や秘密ではなく、正直さと率直さが子どもを守ります。子どもはどのくらい理解できるのか考えてください。あなたが子どものことを一番分かっているのですから。
