--- a/src/style/main.css
+++ b/src/style/main.css
@@ -14,26 +14,19 @@ body {
   margin: 3em auto;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    background-color: #f7f6eb;
-    color: #444;
-  }
-}
-
 a {
   text-underline-position: under;
 }
 
+img {
+  max-width: 100%;
+}
+
 section {
-  margin-top: 2em;
+  margin-top: 5em;
 }
 
-h2 {
-  margin-top: 4em;
-}
-
-h3 {
+section section {
   margin-top: 4em;
 }
 
