--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -7,7 +7,7 @@ date: Last Modified
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>今、子どもとどう付き合うか？WHOから全世界の保護者たちへ。</title>
+    <title>新型コロナウイルスから子どもの心を守る。WHOから世界中の保護者たちへ。</title>
     <link rel="stylesheet" href="/style.css"/>
     <meta property="og:title" content="今、子どもとどう付き合うか？WHOから全世界の保護者たちへ。"/>
     <meta property="og:type" content="website"/>
@@ -25,7 +25,7 @@ date: Last Modified
 
   <body>
     <article>
-      <h1>今、子どもとどう付き合うか？<abbr title="World Health Organization">WHO</abbr>から全世界の保護者たちへ。</h1>
+      <h1>新型コロナウイルスから子どもの心を守る。<abbr title="World Health Organization">WHO</abbr>から世界中の保護者たちへ。</h1>
       <div>目次</div>
       <ol role="directory">
         <li>
