読点と段落の漏れを修正した

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -122,7 +122,7 @@ date: Last Modified
           </h3>
           <ul>
             <li>一緒に本を読んだり、写真を見たりしましょう。</li>
-            <li>クレヨンなどで一緒に絵をかきましょう</li>
+            <li>クレヨンなどで一緒に絵をかきましょう。</li>
             <li>音楽に合わせて踊ったり、歌を歌ったりしましょう。</li>
             <li>家事を一緒にしましょう。掃除や料理をゲームにしてみましょう。</li>
             <li>学校の宿題を手伝ってみましょう。</li>
@@ -139,7 +139,7 @@ date: Last Modified
           </h3>
           <ul>
             <li>子どもが好きな話題を話してみましょう。例えばスポーツ、音楽、有名人、友達のことなどでも良いです。</li>
-            <li>一緒に好きな料理を作ってみましょう</li>
+            <li>一緒に好きな料理を作ってみましょう。</li>
             <li>子どもの好きな音楽に合わせて一緒に運動してみましょう。</li>
           </ul>
         </section>
@@ -196,7 +196,7 @@ date: Last Modified
               <svg class="icon-link" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"/></svg>
             </a>
           </h3>
-          <p>子どもが良いことをした時は、しっかりと褒めましょう。子どもは顔には出さないかもしれませんが、褒められたことを、そのうち自ら進んでやるようになります。
+          <p>子どもが良いことをした時は、しっかりと褒めましょう。子どもは顔には出さないかもしれませんが、褒められたことを、そのうち自ら進んでやるようになります。<br>
           あなたがしっかり見ていて気にかけてくれている、というのも子どもが安心できるポイントになります。</p>
         </section>
 
@@ -208,8 +208,8 @@ date: Last Modified
               <svg class="icon-link" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"/></svg>
             </a>
           </h3>
-          <p>あなたが子どもにお願いしていることは、本当に子どもにできることですか？
-          「子どもが屋内で一日中静かにしていること」はとても難しいのです。でも、あなたが電話している間の１５分だけなら静かにできるかもしれません。</p>
+          <p>あなたが子どもにお願いしていることは、本当に子どもにできることですか？</p>
+          <p>「子どもが屋内で一日中静かにしていること」はとても難しいのです。でも、あなたが電話している間の１５分だけなら静かにできるかもしれません。</p>
         </section>
 
         <section id="Help-your-teen-stay-connected">
@@ -221,8 +221,8 @@ date: Last Modified
             </a>
           </h3>
           <p>思春期の子どもにとって友達との交流は欠かせないものです。</p>
-          <p>SNSを使って友達と交流をする等、物理的な距離を置いてできる交流活動を探してあげましょう。
-          あなたも一緒にできるかもしれません！</p>
+          <p>SNSを使って友達と交流をする等、物理的な距離を置いてできる交流活動を探してあげましょう。</p>
+          <p>あなたも一緒にできるかもしれません！</p>
         </section>
       </section>
 
@@ -300,11 +300,10 @@ date: Last Modified
         </section>
 
         <div class="summary">
-          <p>１日の終わりに、その日を振り返る時間を作りましょう。
-          子どもの良かったことや、楽しかったことを伝えましょう。
-          今日も頑張った自分をしっかりと褒めましょう！
-          お疲れさまでした！
-        </p>
+          <p>１日の終わりに、その日を振り返る時間を作りましょう。</p>
+          <p>子どもの良かったことや、楽しかったことを伝えましょう。</p>
+          <p>今日も頑張った自分をしっかりと褒めましょう！</p>
+          <p>お疲れさまでした！</p>
         </div>
       </section>
 
@@ -585,8 +584,8 @@ date: Last Modified
               <svg class="icon-link" xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"/></svg>
             </a>
           </h3>
-          <p>子どもが大丈夫か確認しましょう。いつでもあなたは子どものことを大切に思っていて、いつでも話を聞くよ、と伝えてあげましょう。
-          そしてその後は楽しいことを一緒に楽しめることをやりましょう！</p>
+          <p>子どもが大丈夫か確認しましょう。いつでもあなたは子どものことを大切に思っていて、いつでも話を聞くよ、と伝えてあげましょう。</p>
+          <p>そしてその後は楽しいことを一緒に楽しめることをやりましょう！</p>
         </section>
       </section>
     </article>
