--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -21,6 +21,7 @@ date: Last Modified
     <meta property="og:image:height" content="630"/>
     <link rel="canonical" href=""/>
     -->
+    <script defer src="//webfont.fontplus.jp/accessor/script/fontplus.js?owI8-d2e8Dw%3D&amp;box=wzsij36dhRc%3D&amp;timeout=5&amp;aa=1&amp;ab=2"></script>
   </head>
 
   <body>
