--- a/src/style/main.css
+++ b/src/style/main.css
@@ -3,7 +3,8 @@
 @import url(../../node_modules/normalize.css/normalize.css);
 
 html {
-  font-family: sans-serif;
+  font-family: "FP-ヒラギノUD角ゴ StdN W3", "FP-HiraginoUDSansStdN-W3",
+    sans-serif;
   color: #232323;
   line-height: 1.6;
 }
@@ -34,6 +35,16 @@ section section {
   margin-top: 6em;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "FP-ヒラギノUD角ゴ StdN W6", "FP-HiraginoUDSansStdN-W6",
+    sans-serif;
+}
+
 ol,
 ul,
 dl {
@@ -52,7 +63,8 @@ dt:not(:first-of-type) {
 
 .summary {
   margin: 2em 0;
-  font-weight: bold;
+  font-family: "FP-ヒラギノUD角ゴ StdN W6", "FP-HiraginoUDSansStdN-W6",
+    sans-serif;
 }
 
 .rest-steps {
