--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -558,10 +558,18 @@ date: Last Modified
           <dd>堀内 清華</dd>
           <dd>関口 裕</dd>
           <dd>大橋 正司</dd>
+          <dd>林 敬子</dd>
+          <dt>翻訳協力</dt>
+          <dd>園田 正樹</dd>
+          <dd>園田 美奈</dd>
           <dt>イラストレーション</dt>
           <dd>原木 友寿那</dd>
-          <dt>コーディング</dt>
+          <dt>実装</dt>
           <dd>桝田 草一</dd>
+          <dd>伊藤 由暁</dd>
+          <dd>金森 悠</dd>
+          <dt>アクセシビリティ監修</dt>
+          <dd>伊原 力也</dd>
           <dt>制作ディレクション</dt>
           <dd>カワセ タケヒロ</dd>
         </dl>
