--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -58,7 +58,7 @@ date: Last Modified
       </ul>
 
       <section id="1-One-on-One-Time">
-        <img src="./illustrations/01_00_yellow.jpg" alt="イラスト：子供の背後に母親が寄り添い、肩に手を添えている。二人とも微笑んでいる。" decoding="async"/>
+        <img src="./illustrations/01_00_yellow.jpg" alt="イラスト：子どもの背後に母親が寄り添い、肩に手を添えている。二人とも微笑んでいる。" decoding="async"/>
         <header class="heading-anchor">
           <h2>1.『1対1の時間』</h2>
           <a href="#1-One-on-One-Time" class="heading-anchor__link">
@@ -69,7 +69,7 @@ date: Last Modified
         子どもと1対1の時間を取ることは楽しいことでもあり、そしてお金もかかりません。子どもと向き合う時間を作ることで、子どもたちは愛情を感じ、安心し、自分自身を大切な存在だと感じることができます。</p>
 
         <section id="Set-aside-time-to-spend-with-each-child">
-          <img src="./illustrations/01_01.jpg" alt="イラスト：子供と母親が正面に向かって微笑んでいる。二人のまわりには携帯ゲーム機、遊具のある公園、調理中のフライパン、テント、トランプといったアクティビティのイメージが並ぶ。" loading="lazy"/>
+          <img src="./illustrations/01_01.jpg" alt="イラスト：子どもと母親が正面に向かって微笑んでいる。二人のまわりには携帯ゲーム機、遊具のある公園、調理中のフライパン、テント、トランプといったアクティビティのイメージが並ぶ。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>それぞれの子どもと過ごせる時間を作りましょう</h3>
             <a href="#Set-aside-time-to-spend-with-each-child" class="heading-anchor__link">
@@ -79,7 +79,7 @@ date: Last Modified
         </section>
 
         <section id="Ask-your-child-what-they-would-like-to-do">
-          <img src="./illustrations/01_02.jpg" alt="イラスト：子供が母親に「あのね、」と話しかけている。母親は子供の問いかけに耳を傾けている。" loading="lazy"/>
+          <img src="./illustrations/01_02.jpg" alt="イラスト：子どもが母親に「あのね、」と話しかけている。母親は子どもの問いかけに耳を傾けている。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>子どもに、何がしたいか聞きましょう</h3>
             <a href="#Ask-your-child-what-they-would-like-to-do" class="heading-anchor__link">
@@ -153,7 +153,7 @@ date: Last Modified
       </p>
 
         <section id="Say-the-behaviour-you-want-to-see">
-          <img src="./illustrations/02_01.jpg" alt="イラスト：母親が、片目を瞑って手を合わせながら、服をタンスにしまってほしいと子供に頼んでいる。" loading="lazy"/>
+          <img src="./illustrations/02_01.jpg" alt="イラスト：母親が、片目を瞑って手を合わせながら、服をタンスにしまってほしいと子どもに頼んでいる。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>あなたが子どもにしてほしい行動を言葉にしましょう。</h3>
             <a href="#Say-the-behaviour-you-want-to-see" class="heading-anchor__link">
@@ -163,7 +163,7 @@ date: Last Modified
         </section>
 
         <section id="It’s-all-in-the-delivery">
-          <img src="./illustrations/02_02.jpg" alt="イラスト：避けるべき状況の例。声を上げて叱りつける母親、背を向けてふくれっ面になる子供。" loading="lazy"/>
+          <img src="./illustrations/02_02.jpg" alt="イラスト：避けるべき状況の例。声を上げて叱りつける母親、背を向けてふくれっ面になる子ども。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>すべては伝え方次第です</h3>
             <a href="#It’s-all-in-the-delivery" class="heading-anchor__link">
@@ -173,7 +173,7 @@ date: Last Modified
         </section>
 
         <section id="Praise-your-child-when-they-are-behaving-well">
-          <img src="./illustrations/02_03.jpg" alt="イラスト：子供と母親が、お互いに親指を立てながら笑顔で向かい合っている。" loading="lazy"/>
+          <img src="./illustrations/02_03.jpg" alt="イラスト：子どもと母親が、お互いに親指を立てながら笑顔で向かい合っている。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>子どもが良い行動をした時は褒めましょう</h3>
             <a href="#Praise-your-child-when-they-are-behaving-well" class="heading-anchor__link">
@@ -184,7 +184,7 @@ date: Last Modified
         </section>
 
         <section id="Get-real">
-          <img src="./illustrations/02_04.jpg" alt="イラスト：通話中のスマートフォンを持った母親が、微笑みながら口の前に人差し指を立て、静かにしてほしいと子供に頼んでいる。" loading="lazy"/>
+          <img src="./illustrations/02_04.jpg" alt="イラスト：通話中のスマートフォンを持った母親が、微笑みながら口の前に人差し指を立て、静かにしてほしいと子どもに頼んでいる。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>現実的な目標を</h3>
             <a href="#Get-real" class="heading-anchor__link">
@@ -195,7 +195,7 @@ date: Last Modified
         </section>
 
         <section id="Help-your-teen-stay-connected">
-          <img src="./illustrations/02_05.jpg" alt="イラスト：楽しげな子供とスマートフォン。スマートフォンの先には何人もの友達が待っている。" loading="lazy"/>
+          <img src="./illustrations/02_05.jpg" alt="イラスト：楽しげな子どもとスマートフォン。スマートフォンの先には何人もの友達が待っている。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>思春期の子どもには交流を</h3>
             <a href="#Help-your-teen-stay-connected" class="heading-anchor__link">
@@ -208,7 +208,7 @@ date: Last Modified
       </section>
 
       <section id="3-Structure-Up">
-        <img src="./illustrations/03_00_yellow.jpg" alt="イラスト：行先を指差しながら、母親の手を引く子供。二人とも楽しそうにしている。" loading="lazy"/>
+        <img src="./illustrations/03_00_yellow.jpg" alt="イラスト：行先を指差しながら、母親の手を引く子ども。二人とも楽しそうにしている。" loading="lazy"/>
         <header class="heading-anchor">
           <h2>3.『新しい日課を作る』</h2>
           <a href="#3-Structure-Up" class="heading-anchor__link">
@@ -217,7 +217,7 @@ date: Last Modified
         <p>新型コロナウイルスによって、仕事、家庭、学校での日常が奪われてしまいました。これは子どもにもあなたにもとても厳しい現実です。新しく、家での日課を作ってみてはいかがでしょうか。</p>
 
         <section id="Create-a-flexible-but-consistent-daily-routine">
-          <img src="./illustrations/03_01.jpg" alt="イラスト：テーブルの上に置かれたカレンダーに、母親と子供が話しながら予定を書き込もうとしている。" loading="lazy"/>
+          <img src="./illustrations/03_01.jpg" alt="イラスト：テーブルの上に置かれたカレンダーに、母親と子どもが話しながら予定を書き込もうとしている。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>柔軟に、でも一貫した日課を作りましょう</h3>
             <a href="#Create-a-flexible-but-consistent-daily-routine" class="heading-anchor__link">
@@ -231,7 +231,7 @@ date: Last Modified
         </section>
 
         <section id="Teach-your-child-about-keeping-safe-distances">
-          <img src="./illustrations/03_02.jpg" alt="イラスト：二人の子供。それぞれの周囲に黄色い円が描かれ、その円同士が少し離れている距離に二人は立っている。" loading="lazy"/>
+          <img src="./illustrations/03_02.jpg" alt="イラスト：二人の子ども。それぞれの周囲に黄色い円が描かれ、その円同士が少し離れている距離に二人は立っている。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>周りとの適切な距離を保つことを教えましょう</h3>
             <a href="#Teach-your-child-about-keeping-safe-distances" class="heading-anchor__link">
@@ -258,7 +258,7 @@ date: Last Modified
         </section>
 
         <section id="You-are-a-model-for-your-child’s-behavior">
-          <img src="./illustrations/03_04.jpg" alt="イラスト：フフンと得意げな様子で決め顔をする母親と、すこし驚いた様子でそれを見つめる子供。" loading="lazy"/>
+          <img src="./illustrations/03_04.jpg" alt="イラスト：フフンと得意げな様子で決め顔をする母親と、すこし驚いた様子でそれを見つめる子ども。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>あなたは子どもの見本です</h3>
             <a href="#You-are-a-model-for-your-child’s-behavior" class="heading-anchor__link">
@@ -276,7 +276,7 @@ date: Last Modified
       </section>
 
       <section id="4-Bad-Behavior">
-        <img src="./illustrations/04_00_yellow.jpg" alt="イラスト：子供が腕を組み、いろいろなモヤモヤを抱えて浮かない表情をたたえている。" loading="lazy"/>
+        <img src="./illustrations/04_00_yellow.jpg" alt="イラスト：子どもが腕を組み、いろいろなモヤモヤを抱えて浮かない表情をたたえている。" loading="lazy"/>
         <header class="heading-anchor">
           <h2>4.『悪い行い』</h2>
           <a href="#4-Bad-Behavior" class="heading-anchor__link">
@@ -286,7 +286,7 @@ date: Last Modified
       </section>
 
       <section id="Redirect">
-        <img src="./illustrations/04_01.jpg" alt="イラスト：母親が、携帯ゲーム機を胸の前に掲げ、子供に呼びかけている。" loading="lazy"/>
+        <img src="./illustrations/04_01.jpg" alt="イラスト：母親が、携帯ゲーム機を胸の前に掲げ、子どもに呼びかけている。" loading="lazy"/>
         <header class="heading-anchor">
           <h3>方向転換させましょう</h3>
           <a href="#Redirect" class="heading-anchor__link">
@@ -311,7 +311,7 @@ date: Last Modified
       </section>
 
       <section id="Use-consequences">
-        <img src="./illustrations/04_03.jpg" alt="イラスト：母親が子供に対して重要なことを言い渡している。" loading="lazy"/>
+        <img src="./illustrations/04_03.jpg" alt="イラスト：母親が子どもに対して重要なことを言い渡している。" loading="lazy"/>
         <header class="heading-anchor">
           <h3>約束を破ると何が起きるかを子どもに伝えましょう</h3>
           <a href="#Use-consequences" class="heading-anchor__link">
@@ -369,7 +369,7 @@ date: Last Modified
         </section>
 
         <section id="Listen-to-your-kids">
-          <img src="./illustrations/05_03.jpg" alt="イラスト：子供が両手を上げながら何かを伝えようとし、母親はそれに耳を傾けている。" loading="lazy"/>
+          <img src="./illustrations/05_03.jpg" alt="イラスト：子どもが両手を上げながら何かを伝えようとし、母親はそれに耳を傾けている。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>子どもの話を聞きましょう</h3>
             <a href="#Listen-to-your-kids" class="heading-anchor__link">
@@ -434,7 +434,7 @@ date: Last Modified
       </section>
 
       <section id="6-Talking-about-COVID-19">
-        <img src="./illustrations/06_00_yellow.jpg" alt="イラスト：父親が、子供の背中に手を沿えながら話しかけている。" loading="lazy"/>
+        <img src="./illustrations/06_00_yellow.jpg" alt="イラスト：父親が、子どもの背中に手を沿えながら話しかけている。" loading="lazy"/>
         <header class="heading-anchor">
           <h2>6.『新型コロナウイルスについて話をする』</h2>
           <a href="#6-Talking-about-COVID-19" class="heading-anchor__link">
@@ -445,7 +445,7 @@ date: Last Modified
       </p>
 
         <section id="Be-open-and-listen">
-          <img src="./illustrations/06_01.jpg" alt="イラスト：子供が、母親の袖を掴みながらさまざまな問いについて尋ねている。" loading="lazy"/>
+          <img src="./illustrations/06_01.jpg" alt="イラスト：子どもが、母親の袖を掴みながらさまざまな問いについて尋ねている。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>子どもが話しやすい環境を作り、しっかり聞きましょう</h3>
             <a href="#Be-open-and-listen" class="heading-anchor__link">
@@ -455,7 +455,7 @@ date: Last Modified
         </section>
 
         <section id="Be-honest">
-          <img src="./illustrations/06_02.jpg" alt="イラスト：向き合う子供と母親。母親は人差し指を立てながら子供に語りかけている。" loading="lazy"/>
+          <img src="./illustrations/06_02.jpg" alt="イラスト：向き合う子どもと母親。母親は人差し指を立てながら子どもに語りかけている。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>正直に</h3>
             <a href="#Be-honest" class="heading-anchor__link">
@@ -465,7 +465,7 @@ date: Last Modified
         </section>
 
         <section id="Be-supportive">
-          <img src="./illustrations/06_03.jpg" alt="イラスト：子供の背後に父親と母親がたち、共に子供の肩に手を沿えてやっている。" loading="lazy"/>
+          <img src="./illustrations/06_03.jpg" alt="イラスト：子どもの背後に父親と母親がたち、共に子どもの肩に手を沿えてやっている。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>支えになって</h3>
             <a href="#Be-supportive" class="heading-anchor__link">
@@ -484,7 +484,7 @@ date: Last Modified
         </section>
 
         <section id="Heroes-not-bullies">
-          <img src="./illustrations/06_04.jpg" alt="イラスト：父親と子供が「ウイルスを撃退する女の子」をイメージしている。子供はその女の子に期待を寄せている。" loading="lazy"/>
+          <img src="./illustrations/06_04.jpg" alt="イラスト：父親と子どもが「ウイルスを撃退する女の子」をイメージしている。子どもはその女の子に期待を寄せている。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>いじめっ子ではなくヒーローに</h3>
             <a href="#Heroes-not-bullies" class="heading-anchor__link">
@@ -512,7 +512,7 @@ date: Last Modified
       </section>
 
         <section id="End-on-a-good-note">
-          <img src="./illustrations/06_06.jpg" alt="イラスト：母親と子供がともに笑顔でお互いを見つめている。" loading="lazy"/>
+          <img src="./illustrations/06_06.jpg" alt="イラスト：母親と子どもがともに笑顔でお互いを見つめている。" loading="lazy"/>
           <header class="heading-anchor">
             <h3>気分良く終わりましょう</h3>
             <a href="#End-on-a-good-note" class="heading-anchor__link">
