--- a/src/style/main.css
+++ b/src/style/main.css
@@ -113,7 +113,7 @@ dt:not(:first-of-type) {
   opacity: 0;
 }
 
-.heading-anchor__link:hover,
+.heading-anchor:hover .heading-anchor__link,
 .heading-anchor__link:focus {
   opacity: 1;
 }
