--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -11,15 +11,16 @@ date: Last Modified
     <link rel="stylesheet" href="/style.css"/>
     <meta property="og:title" content="今、子どもとどう付き合うか？WHOから全世界の保護者たちへ。"/>
     <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://covid-19-act.jp/parenting-who/"/>
+    <meta property="og:image" content="http://covid-19-act.jp/parenting-who/illustrations/OGP.jpg"/>
+    <meta property="og:image:secure_url" content="https://covid-19-act.jp/parenting-who/illustrations/OGP.jpg"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="630"/>
+    <meta property="og:image:alt" content="イラスト：両親と二人のこどもが微笑んでいる。家族を波括弧が囲んでいる。"/>
+    <link rel="canonical" href="https://covid-19-act.jp/parenting-who/"/>
     <!--
     <meta name="description" content=""/>
     <meta property="og:description" content=""/>
-    <meta property="og:url" content=""/>
-    <meta property="og:image" content=""/>
-    <meta property="og:image:secure_url" content=""/>
-    <meta property="og:image:width" content="1200"/>
-    <meta property="og:image:height" content="630"/>
-    <link rel="canonical" href=""/>
     -->
     <script defer src="//webfont.fontplus.jp/accessor/script/fontplus.js?owI8-d2e8Dw%3D&amp;box=wzsij36dhRc%3D&amp;timeout=5&amp;aa=1&amp;ab=2"></script>
   </head>
