stylelint をなでなでしてかけてしまった記述を復活

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -123,6 +123,6 @@ ul ul {
 }
 
 .heading-anchor__link:focus,
-.heading-anchor:hover .heading-anchor {
+.heading-anchor:hover .heading-anchor__link {
   opacity: 1;
 }
