add OGP.jpg in contents

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -27,6 +27,10 @@ date: Last Modified
 
   <body>
     <article>
+      <picture>
+        <source srcset="./illustrations/OGP.webp" type="image/webp"/>
+        <img src="./illustrations/OGP.jpg" alt=""/>
+      </picture>
       <h1>新型コロナウイルスから子どもの心を守る。<abbr title="World Health Organization">WHO</abbr>から世界中の保護者たちへ。</h1>
       <div>目次</div>
       <ol role="directory">
@@ -61,7 +65,7 @@ date: Last Modified
       <section id="1-One-on-One-Time">
         <picture>
           <source srcset="./illustrations/01_00_yellow.webp" type="image/webp">
-          <img src="./illustrations/01_00_yellow.jpg" alt="イラスト：子どもの背後に母親が寄り添い、肩に手を添えている。二人とも微笑んでいる。" decoding="async"/>
+          <img src="./illustrations/01_00_yellow.jpg" alt="イラスト：子どもの背後に母親が寄り添い、肩に手を添えている。二人とも微笑んでいる。" loading="lazy"/>
         </picture>
         <header class="heading-anchor">
           <h2>1.『1対1の時間』</h2>
@@ -643,6 +647,8 @@ date: Last Modified
         <li>
           <a href="http://www.jpeds.or.jp/modules/general/index.php?content_id=29">留守番をする子どもの安全をまもるためにできること（公益社団法人 日本小児科学会）</a>
         </li>
+        <li>
+          <a lang="en" href="https://covid19healthliteracyproject.com/#japanese">COVID-19 Health Literacy Project</a>
         <li>
           <a lang="en" href="https://www.unicef.org/coronavirus/covid-19-parenting-tips">Tips for parenting during the
           coronavirus (COVID-19) outbreak</a>
