remove defer from web font script

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -22,7 +22,7 @@ date: Last Modified
     <meta name="description" content=""/>
     <meta property="og:description" content=""/>
     -->
-    <script defer src="//webfont.fontplus.jp/accessor/script/fontplus.js?owI8-d2e8Dw%3D&amp;box=wzsij36dhRc%3D&amp;timeout=5&amp;aa=1&amp;ab=2"></script>
+    <script src="//webfont.fontplus.jp/accessor/script/fontplus.js?owI8-d2e8Dw%3D&amp;box=wzsij36dhRc%3D&amp;timeout=5&amp;aa=1&amp;ab=2"></script>
   </head>
 
   <body>
