--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -18,6 +18,8 @@ date: Last Modified
     <meta property="og:image:height" content="630"/>
     <meta property="og:image:alt" content="イラスト：両親と二人のこどもが微笑んでいる。家族を波括弧が囲んでいる。"/>
     <link rel="canonical" href="https://covid-19-act.jp/parenting-who/"/>
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="今、子どもとどう付き合うか？WHOから全世界の保護者たちへ。">
     <!--
     <meta name="description" content=""/>
     <meta property="og:description" content=""/>
