--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -8,7 +8,9 @@ date: Last Modified
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>新型コロナウイルスから子どもの心を守る。WHOから世界中の保護者たちへ。</title>
+    <script src="//webfont.fontplus.jp/accessor/script/fontplus.js?owI8-d2e8Dw%3D&amp;box=wzsij36dhRc%3D&amp;timeout=5&amp;aa=1&amp;ab=2"></script>
     <link rel="stylesheet" href="/style.css"/>
+    <meta name="description" content="新型コロナウイルスによる世界的なパンデミックが発生している中、WHO（世界保健機関）が、保護者の方々のために、今この状況における子どもとの付き合い方についてアドバイスを発信しています。"/>
     <meta property="og:title" content="今、子どもとどう付き合うか？WHOから全世界の保護者たちへ。"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://covid-19-act.jp/parenting-who/"/>
@@ -20,11 +22,7 @@ date: Last Modified
     <link rel="canonical" href="https://covid-19-act.jp/parenting-who/"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:title" content="今、子どもとどう付き合うか？WHOから全世界の保護者たちへ。">
-    <!--
-    <meta name="description" content=""/>
-    <meta property="og:description" content=""/>
-    -->
-    <script src="//webfont.fontplus.jp/accessor/script/fontplus.js?owI8-d2e8Dw%3D&amp;box=wzsij36dhRc%3D&amp;timeout=5&amp;aa=1&amp;ab=2"></script>
+    <meta property="og:description" content="新型コロナウイルスによる世界的なパンデミックが発生している中、WHO（世界保健機関）が、保護者の方々のために、今この状況における子どもとの付き合い方についてアドバイスを発信しています。"/>
   </head>
 
   <body>
