GAタグを追加した

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -23,6 +23,12 @@ date: Last Modified
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:title" content="今、子どもとどう付き合うか？WHOから全世界の保護者たちへ。">
     <meta property="og:description" content="急な環境の変化や世の中の物々しい雰囲気によって強いストレスを感じたり、不安定になったお子さんとどう接すれば良いのか、悩んでいらっしゃる保護者の方々のために。"/>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-162419995-1');
+    </script>
   </head>
 
   <body>
