--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -10,7 +10,7 @@ date: Last Modified
     <title>新型コロナウイルスから子どもの心を守る。WHOから世界中の保護者たちへ。</title>
     <script src="//webfont.fontplus.jp/accessor/script/fontplus.js?owI8-d2e8Dw%3D&amp;box=wzsij36dhRc%3D&amp;timeout=5&amp;aa=1&amp;ab=2"></script>
     <link rel="stylesheet" href="/style.css"/>
-    <meta name="description" content="新型コロナウイルスによる世界的なパンデミックが発生している中、WHO（世界保健機関）が、保護者の方々のために、今この状況における子どもとの付き合い方についてアドバイスを発信しています。"/>
+    <meta name="description" content="急な環境の変化や世の中の物々しい雰囲気によって強いストレスを感じたり、不安定になったお子さんとどう接すれば良いのか、悩んでいらっしゃる保護者の方々のために。"/>
     <meta property="og:title" content="今、子どもとどう付き合うか？WHOから全世界の保護者たちへ。"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://covid-19-act.jp/parenting-who/"/>
@@ -20,9 +20,9 @@ date: Last Modified
     <meta property="og:image:height" content="630"/>
     <meta property="og:image:alt" content="イラスト：両親と二人のこどもが微笑んでいる。家族を波括弧が囲んでいる。"/>
     <link rel="canonical" href="https://covid-19-act.jp/parenting-who/"/>
+    <meta property="og:description" content="急な環境の変化や世の中の物々しい雰囲気によって強いストレスを感じたり、不安定になったお子さんとどう接すれば良いのか、悩んでいらっしゃる保護者の方々のために。"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:title" content="今、子どもとどう付き合うか？WHOから全世界の保護者たちへ。">
-    <meta property="og:description" content="新型コロナウイルスによる世界的なパンデミックが発生している中、WHO（世界保健機関）が、保護者の方々のために、今この状況における子どもとの付き合い方についてアドバイスを発信しています。"/>
   </head>
 
   <body>
