--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -25,10 +25,16 @@ date: Last Modified
     <meta property="og:description" content="急な環境の変化や世の中の物々しい雰囲気によって強いストレスを感じたり、不安定になったお子さんとどう接すれば良いのか、悩んでいらっしゃる保護者の方々のために。"/>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag('js', new Date());
       gtag('config', 'UA-162419995-1');
     </script>
+
+    <link rel="icon" sizes="any" href="/image/favicon.svg" type="image/svg+xml"/>
+    <link rel="mask-icon" href="/image/favicon.svg" color="yellow"/>
+    <link rel="icon alternate" href="/image/favicon.png" type="image/png"/>
   </head>
 
   <body>
@@ -711,9 +717,12 @@ date: Last Modified
         <p>取得したデータはWebサイト利用状況の分析、サイト運営者へのレポートの作成、その他のサービスの提供に関わる目的に限り、これを使用します。</p>
         <p>Google Analyticsの利用規約及びプライバシーポリシーに関する説明については、Google Analyticsのサイトをご覧ください。</p>
         <ul>
-          <li><a href="https://marketingplatform.google.com/about/analytics/terms/jp/" rel="noopener" target="_blank">Google Analytics利用規約</a>
-          <li><a href="https://policies.google.com/privacy?hl=ja" rel="noopener" target="_blank">Googleのプライバシーポリシー</a>
-          <li><a href="https://support.google.com/analytics/answer/6004245?hl=ja" rel="noopener" target="_blank">Google Analyticsのデータの保護について</a>
+          <li>
+            <a href="https://marketingplatform.google.com/about/analytics/terms/jp/" rel="noopener" target="_blank">Google Analytics利用規約</a>
+          <li>
+            <a href="https://policies.google.com/privacy?hl=ja" rel="noopener" target="_blank">Googleのプライバシーポリシー</a>
+          <li>
+            <a href="https://support.google.com/analytics/answer/6004245?hl=ja" rel="noopener" target="_blank">Google Analyticsのデータの保護について</a>
         </ul>
       </section>
       <section id="Credit">
