--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -638,7 +638,7 @@ date: Last Modified
               <span class="visually-hidden">このセクションへのリンク</span></a>
           </header>
           <p>子どもが大丈夫か確認しましょう。いつでもあなたは子どものことを大切に思っていて、いつでも話を聞くよ、と伝えてあげましょう。</p>
-          <p>そしてその後は楽しいことを一緒に楽しめることをやりましょう！</p>
+          <p>そしてその後は一緒に楽しめることをやりましょう！</p>
         </section>
       </section>
     </article>
