--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -586,6 +586,10 @@ date: Last Modified
         </section>
 
         <section id="It-is-OK-not-to-know-the-answers">
+          <picture>
+            <source srcset="./illustrations/06_04.webp" type="image/webp"/>
+            <img src="./illustrations/06_04.jpg" alt="イラスト：父親が子どもに「実はお父さんも知らなくて」と話しかけている。" loading="lazy"/>
+          </picture>
           <header class="heading-anchor">
             <h3>答えを知らなくても大丈夫</h3>
             <a href="#It-is-OK-not-to-know-the-answers" class="heading-anchor__link">
@@ -596,8 +600,8 @@ date: Last Modified
 
         <section id="Heroes-not-bullies">
           <picture>
-            <source srcset="./illustrations/06_04.webp" type="image/webp"/>
-            <img src="./illustrations/06_04.jpg" alt="イラスト：父親と子どもが「ウイルスを撃退する女の子」をイメージしている。子どもはその女の子に期待を寄せている。" loading="lazy"/>
+            <source srcset="./illustrations/06_05.webp" type="image/webp"/>
+            <img src="./illustrations/06_05.jpg" alt="イラスト：父親と子どもが「ウイルスを撃退する女の子」をイメージしている。子どもはその女の子に期待を寄せている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>いじめっ子ではなくヒーローに</h3>
@@ -610,8 +614,8 @@ date: Last Modified
 
         <section id="There-are-a-lot-of-stories-going-around">
           <picture>
-            <source srcset="./illustrations/06_05.webp" type="image/webp"/>
-            <img src="./illustrations/06_05.jpg" alt="イラスト：スマートフォンから、◯や✕の吹き出しがいくつも出現している。" loading="lazy"/>
+            <source srcset="./illustrations/06_06.webp" type="image/webp"/>
+            <img src="./illustrations/06_06.jpg" alt="イラスト：スマートフォンから、◯や✕の吹き出しがいくつも出現している。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>たくさんのストーリーが出回っています</h3>
@@ -630,8 +634,8 @@ date: Last Modified
 
         <section id="End-on-a-good-note">
           <picture>
-            <source srcset="./illustrations/06_06.webp" type="image/webp"/>
-            <img src="./illustrations/06_06.jpg" alt="イラスト：母親と子どもがともに笑顔でお互いを見つめている。" loading="lazy"/>
+            <source srcset="./illustrations/06_07.webp" type="image/webp"/>
+            <img src="./illustrations/06_07.jpg" alt="イラスト：母親と子どもがともに笑顔でお互いを見つめている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>気分良く終わりましょう</h3>
