Google Analytics 関連のリンクの target="_blank" を削除した

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -719,11 +719,11 @@ date: Last Modified
         <p>Google Analyticsの利用規約及びプライバシーポリシーに関する説明については、Google Analyticsのサイトをご覧ください。</p>
         <ul>
           <li>
-            <a href="https://marketingplatform.google.com/about/analytics/terms/jp/" rel="noopener" target="_blank">Google Analytics利用規約</a>
+            <a href="https://marketingplatform.google.com/about/analytics/terms/jp/">Google Analytics利用規約</a>
           <li>
-            <a href="https://policies.google.com/privacy?hl=ja" rel="noopener" target="_blank">Googleのプライバシーポリシー</a>
+            <a href="https://policies.google.com/privacy?hl=ja">Googleのプライバシーポリシー</a>
           <li>
-            <a href="https://support.google.com/analytics/answer/6004245?hl=ja" rel="noopener" target="_blank">Google Analyticsのデータの保護について</a>
+            <a href="https://support.google.com/analytics/answer/6004245?hl=ja">Google Analyticsのデータの保護について</a>
         </ul>
       </section>
       <section id="Credit">
