ライセンス表記を追加した

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -759,6 +759,14 @@ date: Last Modified
           <dd>カワセ タケヒロ</dd>
         </dl>
       </section>
+      <section id="License">
+        <header class="heading-anchor">
+          <h2>ライセンス</h2>
+          <a href="#License" class="heading-anchor__link">
+            <span class="visually-hidden">このセクションへのリンク</span></a>
+        </header>
+        <p><a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.ja">CC BY-NC-SA 4.0</a></p>
+      </section>
       <section id="Modified">
         <header class="heading-anchor">
           <h2>更新</h2>
