ライセンス文を編集した

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -765,7 +765,12 @@ date: Last Modified
           <a href="#License" class="heading-anchor__link">
             <span class="visually-hidden">このセクションへのリンク</span></a>
         </header>
-        <p><a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.ja">CC BY-NC-SA 4.0</a></p>
+        <p><a href="https://creativecommons.org/licenses/by-nc/4.0/deed.ja">CC BY-NC 4.0</a></p>
+
+        <p>This is an adaptation of an original work “Coronavirus disease (COVID-19) advice for the public: Healthy Parenting". Geneva: World Health Organization (WHO); 2020. Licence: CC BY-NC-SA 3.0 IGO”. This adaptation was not created by WHO. WHO is not responsible for the content or accuracy of this adaptation. The original edition shall be the binding and authentic edition”.</p>
+
+        <p>オリジナルのポスターはCC BY-NC-SA 3.0 IGOライセンスで配布されていますが、本翻訳およびイラストの制作者は国際機関、政府機関、政府間組織、国連機関ではないため、類似のライセンスとして例示されているCC BY-NC 4.0ライセンスで公開しています。詳細は以下のページをご確認ください。<br/>
+        <a lang="en" href="https://www.who.int/about/who-we-are/publishing-policies/copyright">Copyright, Licensing and Permissions - World Health Organization</a></p>
       </section>
       <section id="Modified">
         <header class="heading-anchor">
