テキストの重複を修正した

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -368,7 +368,7 @@ date: Last Modified
           </header>
           <ul>
             <li>子どもの悪い行いは早く見つけ、子どもの注意を悪い方向から良い方向へ方向転換させます。</li>
-            <li>始まる前に止めること！ 始まる前に止めること！ 子どもが落ち着きなくなってきたら「ゲームしようか！」などと、楽しいことに興味を向けて気をそらします。</li>
+            <li>始まる前に止めること！ 子どもが落ち着きなくなってきたら「ゲームしようか！」などと、楽しいことに興味を向けて気をそらします。</li>
           </ul>
         </section>
 
