:wheelchair: イラストの変更に合わせて alt を修正

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -105,7 +105,7 @@ date: Last Modified
         <section id="Ask-your-child-what-they-would-like-to-do">
           <picture>
             <source srcset="./illustrations/01_02.webp" type="image/webp"/>
-            <img width="1280" height="905" src="./illustrations/01_02.jpg" alt="イラスト：子どもが母親に「あのね、」と話しかけている。母親は子どもの問いかけに耳を傾けている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/01_02.jpg" alt="イラスト：子どもが父親に「あのね、」と話しかけている。父親は子どもの問いかけに耳を傾けている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>子どもに、何がしたいか聞きましょう</h3>
@@ -194,7 +194,7 @@ date: Last Modified
         <section id="Say-the-behaviour-you-want-to-see">
           <picture>
             <source srcset="./illustrations/02_01.webp" type="image/webp"/>
-            <img width="1280" height="905" src="./illustrations/02_01.jpg" alt="イラスト：母親が、片目を瞑って手を合わせながら、服をタンスにしまってほしいと子どもに頼んでいる。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/02_01.jpg" alt="イラスト：祖母が、片目を瞑って手を合わせながら、服をタンスにしまってほしいと子どもに頼んでいる。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>あなたが子どもにしてほしい行動を言葉にしましょう。</h3>
@@ -359,7 +359,7 @@ date: Last Modified
         <section id="Redirect">
           <picture>
             <source srcset="./illustrations/04_01.webp" type="image/webp"/>
-            <img width="1280" height="905" src="./illustrations/04_01.jpg" alt="イラスト：母親が、携帯ゲーム機を胸の前に掲げ、子どもに呼びかけている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/04_01.jpg" alt="イラスト：子どもと父親が楽しそうにボールを追いかけている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>方向転換させましょう</h3>
@@ -549,7 +549,7 @@ date: Last Modified
         <section id="Be-open-and-listen">
           <picture>
             <source srcset="./illustrations/06_01.webp" type="image/webp"/>
-            <img width="1280" height="905" src="./illustrations/06_01.jpg" alt="イラスト：子どもが、母親の袖を掴みながらさまざまな問いについて尋ねている。" loading="lazy"/>
+            <img width="1280" height="905" src="./illustrations/06_01.jpg" alt="イラスト：子どもが、祖母の袖を掴みながらさまざまな問いについて尋ねている。" loading="lazy"/>
           </picture>
           <header class="heading-anchor">
             <h3>子どもが話しやすい環境を作り、しっかり聞きましょう</h3>
