--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -699,6 +699,21 @@ date: Last Modified
           Healthy Parenting (<abbr title="World Health Organization">WHO</abbr>)</a>
         </p>
       </section>
+      <section id="License">
+        <header class="heading-anchor">
+          <h2>ライセンス</h2>
+          <a href="#License" class="heading-anchor__link">
+            <span class="visually-hidden">このセクションへのリンク</span></a>
+        </header>
+        <p>本記事のライセンス：<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.ja">CC BY-NC-SA 4.0</a></p>
+
+        <p>This is an adaptation of an original work “Coronavirus disease (COVID-19) advice for the public: Healthy Parenting". Geneva: World Health Organization (WHO); 2020. Licence: CC BY-NC-SA 3.0 IGO”. This adaptation was not created by WHO. WHO is not responsible for the content or accuracy of this adaptation. The original edition shall be the binding and authentic edition”.</p>
+
+        <p>オリジナルのポスター『“Coronavirus disease (COVID-19) advice for the public: Healthy Parenting"』はCC BY-NC-SA 3.0 IGOライセンスで配布されています。</p>
+
+        <p>本記事の制作者は個人の有志が集まったグループです。本記事にCC BY-NC-SA 3.0 IGOを適用することは適切ではないため（IGOは国際機関、政府機関、政府間組織、国連機関等を指します）、同等のライセンスとしてWHOのライセンスポリシーに例示されているCC BY-NC-SA 4.0に準拠したライセンスポリシーを適用しています。詳細は以下のページをご確認ください（ページ本文には、「Similar licences that could be used are theCC BY-NC 3.0 licence or the CC BY-NC 4.0 licence」とありますが、リンク先としてCC BY-NC-SA 4.0 licenceへのURLが付されており、本文もCC BY-NC-SA 4.0の誤植と思われます）<br/>
+        <a lang="en" href="https://www.who.int/about/who-we-are/publishing-policies/copyright">Copyright, Licensing and Permissions - World Health Organization</a></p>
+      </section>
       <section id="Precautions">
         <header class="heading-anchor">
           <h2>注意事項</h2>
@@ -758,19 +773,6 @@ date: Last Modified
           <dt>制作ディレクション</dt>
           <dd>カワセ タケヒロ</dd>
         </dl>
-      </section>
-      <section id="License">
-        <header class="heading-anchor">
-          <h2>ライセンス</h2>
-          <a href="#License" class="heading-anchor__link">
-            <span class="visually-hidden">このセクションへのリンク</span></a>
-        </header>
-        <p><a href="https://creativecommons.org/licenses/by-nc/4.0/deed.ja">CC BY-NC 4.0</a></p>
-
-        <p>This is an adaptation of an original work “Coronavirus disease (COVID-19) advice for the public: Healthy Parenting". Geneva: World Health Organization (WHO); 2020. Licence: CC BY-NC-SA 3.0 IGO”. This adaptation was not created by WHO. WHO is not responsible for the content or accuracy of this adaptation. The original edition shall be the binding and authentic edition”.</p>
-
-        <p>オリジナルのポスターはCC BY-NC-SA 3.0 IGOライセンスで配布されていますが、本翻訳およびイラストの制作者は国際機関、政府機関、政府間組織、国連機関ではないため、類似のライセンスとして例示されているCC BY-NC 4.0ライセンスで公開しています。詳細は以下のページをご確認ください。<br/>
-        <a lang="en" href="https://www.who.int/about/who-we-are/publishing-policies/copyright">Copyright, Licensing and Permissions - World Health Organization</a></p>
       </section>
       <section id="Modified">
         <header class="heading-anchor">
