注意事項を追記した

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -721,6 +721,7 @@ date: Last Modified
             <span class="visually-hidden">このセクションへのリンク</span></a>
         </header>
         <ul>
+          <li>本記事はWHOが制作したものではなく、有志の個人が集まったグループによって制作されたものです。WHOは本記事の正確性についていかなる責任も負いません。</li>
           <li>本記事で紹介している内容は、あくまで参考情報です。実行することで必ずしも健康を保証できるものではありません。お子さんの様子を見て柔軟に対応してください。</li>
           <li>本記事について、疑義や誤りのご指摘などは、info@polaar.jp までお問い合せください。（個人での対応となりますので、すべてに対応できない可能性があります。あらかじめご了承ください）</li>
         </ul>
