制作・翻訳にライセンス監修を追加した

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -771,6 +771,8 @@ date: Last Modified
           <dd>金森 悠</dd>
           <dt>アクセシビリティ監修</dt>
           <dd>伊原 力也</dd>
+          <dt>ライセンス監修</dt>
+          <dd>数藤 雅彦</dd>
           <dt>制作ディレクション</dt>
           <dd>カワセ タケヒロ</dd>
         </dl>
