--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -68,10 +68,10 @@ date: Last Modified
       </ol>
 
       <p>小さなお子さん、あるいは思春期のお子さんがいらっしゃる保護者の皆さんの中には、新型コロナウイルスによる世界的なパンデミックが発生している中で、急な環境の変化や世の中の物々しい雰囲気によって強いストレスを感じたり、不安定になったお子さんとどう接すれば良いのか、悩んでいらっしゃる方も多いと思います。</p>
-      <p>そんな保護者の方々のために、WHO（世界保健機関）が全世界の保護者へ向けて、今この状況における子どもとの付き合い方についてアドバイスを発信しています。</p>
+      <p>そんな保護者の方々のために、<abbr title="World Health Organization">WHO</abbr>（世界保健機関）が全世界の保護者へ向けて、今この状況における子どもとの付き合い方についてアドバイスを発信しています。</p>
 
       <ul class="note">
-        <li>本記事の公開時点までにWHO『<a lang="en" href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public/healthy-parenting">Healthy Parenting</a>』にて公開されている、6枚のポスター（PDF）に基づき翻訳しています。</li>
+        <li>本記事の公開時点までに<abbr title="World Health Organization">WHO</abbr>『<a lang="en" href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public/healthy-parenting">Healthy Parenting</a>』にて公開されている、6枚のポスター（PDF）に基づき翻訳しています。</li>
         <li>一部の文章について、原典の意図を分かりやすく伝えるために日本向けに付け足している箇所があります。</li>
       </ul>
 
