アンカーの id を License から Lincen`c`e に変更した（なんとなく）

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -699,10 +699,10 @@ date: Last Modified
           Healthy Parenting (<abbr title="World Health Organization">WHO</abbr>)</a>
         </p>
       </section>
-      <section id="License">
+      <section id="Licence">
         <header class="heading-anchor">
           <h2>ライセンス</h2>
-          <a href="#License" class="heading-anchor__link">
+          <a href="#Licence" class="heading-anchor__link">
             <span class="visually-hidden">このセクションへのリンク</span></a>
         </header>
         <p>本記事のライセンス：<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/deed.ja">CC BY-NC-SA 4.0</a></p>
