--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -709,7 +709,7 @@ date: Last Modified
 
         <p>This is an adaptation of an original work “Coronavirus disease (COVID-19) advice for the public: Healthy Parenting". Geneva: World Health Organization (<abbr title="World Health Organization">WHO</abbr>); 2020. Licence: CC BY-NC-SA 3.0 IGO”. This adaptation was not created by <abbr title="World Health Organization">WHO</abbr>. <abbr title="World Health Organization">WHO</abbr> is not responsible for the content or accuracy of this adaptation. The original edition shall be the binding and authentic edition”.</p>
 
-        <p>オリジナルのポスター『“Coronavirus disease (COVID-19) advice for the public: Healthy Parenting"』はCC BY-NC-SA 3.0 IGOライセンスで配布されています。</p>
+        <p>オリジナルのポスター『Coronavirus disease (COVID-19) advice for the public: Healthy Parenting』はCC BY-NC-SA 3.0 IGOライセンスで配布されています。</p>
 
         <p>本記事の制作者は個人の有志が集まったグループです。本記事にCC BY-NC-SA 3.0 IGOを適用することは適切ではないため（IGOは国際機関、政府機関、政府間組織、国連機関等を指します）、同等のライセンスとして<abbr title="World Health Organization">WHO</abbr>のライセンスポリシーに例示されているCC BY-NC-SA 4.0に準拠したライセンスポリシーを適用しています。詳細は以下のページをご確認ください（ページ本文には、「Similar licences that could be used are the CC BY-NC 3.0 licence or the CC BY-NC 4.0 licence」とありますが、リンク先としてCC BY-NC-SA 4.0 licenceへのURLが付されており、本文もCC BY-NC-SA 4.0の誤植と思われます）。<br/>
         <a lang="en" href="https://www.who.int/about/who-we-are/publishing-policies/copyright">Copyright, Licensing and Permissions - World Health Organization</a></p>
