--- a/src/index.njk
+++ b/src/index.njk
@@ -9,7 +9,7 @@ date: Last Modified
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>新型コロナウイルスから子どもの心を守る。WHOから世界中の保護者たちへ。</title>
     <script src="//webfont.fontplus.jp/accessor/script/fontplus.js?owI8-d2e8Dw%3D&amp;box=wzsij36dhRc%3D&amp;timeout=5&amp;aa=1&amp;ab=2"></script>
-    <link rel="stylesheet" href="/style.css"/>
+    <link rel="stylesheet" href="./style.css"/>
     <meta name="description" content="急な環境の変化や世の中の物々しい雰囲気によって強いストレスを感じたり、不安定になったお子さんとどう接すれば良いのか、悩んでいらっしゃる保護者の方々のために。"/>
     <meta property="og:title" content="新型コロナウイルスから子どもの心を守る。WHOから世界中の保護者たちへ。"/>
     <meta property="og:type" content="website"/>
@@ -32,10 +32,10 @@ date: Last Modified
       gtag('config', 'UA-162419995-1');
     </script>
 
-    <link rel="icon" sizes="any" href="/image/favicon.svg" type="image/svg+xml"/>
-    <link rel="mask-icon" href="/image/favicon.svg" color="yellow"/>
-    <link rel="icon alternate" href="/image/favicon.png" type="image/png"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="/image/apple-touch-icon.png"/>
+    <link rel="icon" sizes="any" href="./image/favicon.svg" type="image/svg+xml"/>
+    <link rel="mask-icon" href="./image/favicon.svg" color="yellow"/>
+    <link rel="icon alternate" href="./image/favicon.png" type="image/png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="./image/apple-touch-icon.png"/>
   </head>
 
   <body>
