クレジットにメンバーの所属を追記した

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -755,27 +755,27 @@ date: Last Modified
         </header>
         <dl>
           <dt>翻訳・校正</dt>
-          <dd>佐々木 優衣</dd>
-          <dd>坂元 晴香</dd>
-          <dd>堀内 清華</dd>
-          <dd>関口 裕</dd>
-          <dd>大橋 正司</dd>
-          <dd>林 敬子</dd>
+          <dd>佐々木 優衣（医学生 ／ グラスゴー大学医学部4年）</dd>
+          <dd>坂元 晴香（内科医 ／ 東京大学大学院医学系研究科国際保健政策学教室）</dd>
+          <dd>堀内 清華（小児科医 ／ 山梨大学大学院総合研究部附属出生コホート研究センター）</dd>
+          <dd>関口 裕（日本デザインセンター オンスクリーン制作室 クリエイティブディレクター, デザイナー）</dd>
+          <dd>大橋 正司（サイフォン合同会社 代表, Goodpatch Anywhere, インフォメーションアーキテクト）</dd>
+          <dd>林 敬子（Code for Japan UI/UXデザイナー）</dd>
           <dt>協力</dt>
-          <dd>園田 正樹</dd>
-          <dd>園田 美奈</dd>
+          <dd>園田 正樹（産婦人科医 ／ 東京大学医学部附属病院 産科婦人科学教室）</dd>
+          <dd>園田 美奈（助産師 ／ 大分大学医学部医学科 3年）</dd>
           <dt>イラストレーション</dt>
-          <dd>原木 友寿那</dd>
+          <dd>原木 友寿那（東京藝術大学大学院美術研究科デザイン専攻 修士1年）</dd>
           <dt>実装</dt>
-          <dd>桝田 草一</dd>
-          <dd>伊藤 由暁</dd>
-          <dd>金森 悠</dd>
+          <dd>桝田 草一（株式会社サイバーエージェント Developer Experts - Accessibility）</dd>
+          <dd>伊藤 由暁（株式会社まぼろし フロントエンドエンジニア）</dd>
+          <dd>金森 悠（株式会社 SmartHR プロダクトデザイナー）</dd>
           <dt>アクセシビリティ監修</dt>
-          <dd>伊原 力也</dd>
+          <dd>伊原 力也（freee株式会社 インフォメーションアーキテクト, UXデザイナー）</dd>
           <dt>ライセンス監修</dt>
-          <dd>数藤 雅彦</dd>
+          <dd>数藤 雅彦（五常総合法律事務所 弁護士）</dd>
           <dt>制作ディレクション</dt>
-          <dd>カワセ タケヒロ</dd>
+          <dd>カワセ タケヒロ（POLAAR コンセプター, デザイナー）</dd>
         </dl>
       </section>
       <section id="Modified">
