スタイルを調整した

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -753,29 +753,29 @@ date: Last Modified
           <a href="#Credit" class="heading-anchor__link">
             <span class="visually-hidden">このセクションへのリンク</span></a>
         </header>
-        <dl>
+        <dl class="credit-list">
           <dt>翻訳・校正</dt>
-          <dd>佐々木 優衣（医学生 ／ グラスゴー大学医学部4年）</dd>
-          <dd>坂元 晴香（内科医 ／ 東京大学大学院医学系研究科国際保健政策学教室）</dd>
-          <dd>堀内 清華（小児科医 ／ 山梨大学大学院総合研究部附属出生コホート研究センター）</dd>
-          <dd>関口 裕（日本デザインセンター オンスクリーン制作室 クリエイティブディレクター, デザイナー）</dd>
-          <dd>大橋 正司（サイフォン合同会社 代表, Goodpatch Anywhere, インフォメーションアーキテクト）</dd>
-          <dd>林 敬子（Code for Japan UI/UXデザイナー）</dd>
+          <dd>佐々木 優衣<span class="credit-list__work-in">（医学生 ／ グラスゴー大学医学部4年）</span></dd>
+          <dd>坂元 晴香<span class="credit-list__work-in">（内科医 ／ 東京大学大学院医学系研究科国際保健政策学教室）</span></dd>
+          <dd>堀内 清華<span class="credit-list__work-in">（小児科医 ／ 山梨大学大学院総合研究部附属出生コホート研究センター）</span></dd>
+          <dd>関口 裕<span class="credit-list__work-in">（日本デザインセンター オンスクリーン制作室 クリエイティブディレクター, デザイナー）</span></dd>
+          <dd>大橋 正司<span class="credit-list__work-in">（サイフォン合同会社 代表, Goodpatch Anywhere, インフォメーションアーキテクト）</span></dd>
+          <dd>林 敬子<span class="credit-list__work-in">（Code for Japan UI/UXデザイナー）</span></dd>
           <dt>協力</dt>
-          <dd>園田 正樹（産婦人科医 ／ 東京大学医学部附属病院 産科婦人科学教室）</dd>
-          <dd>園田 美奈（助産師 ／ 大分大学医学部医学科 3年）</dd>
+          <dd>園田 正樹<span class="credit-list__work-in">（産婦人科医 ／ 東京大学医学部附属病院 産科婦人科学教室）</span></dd>
+          <dd>園田 美奈<span class="credit-list__work-in">（助産師 ／ 大分大学医学部医学科 3年）</span></dd>
           <dt>イラストレーション</dt>
-          <dd>原木 友寿那（東京藝術大学大学院美術研究科デザイン専攻 修士1年）</dd>
+          <dd>原木 友寿那<span class="credit-list__work-in">（東京藝術大学大学院美術研究科デザイン専攻 修士1年）</span></dd>
           <dt>実装</dt>
-          <dd>桝田 草一（株式会社サイバーエージェント Developer Experts - Accessibility）</dd>
-          <dd>伊藤 由暁（株式会社まぼろし フロントエンドエンジニア）</dd>
-          <dd>金森 悠（株式会社 SmartHR プロダクトデザイナー）</dd>
+          <dd>桝田 草一<span class="credit-list__work-in">（株式会社サイバーエージェント Developer Experts - Accessibility）</span></dd>
+          <dd>伊藤 由暁<span class="credit-list__work-in">（株式会社まぼろし フロントエンドエンジニア）</span></dd>
+          <dd>金森 悠<span class="credit-list__work-in">（株式会社 SmartHR プロダクトデザイナー）</span></dd>
           <dt>アクセシビリティ監修</dt>
-          <dd>伊原 力也（freee株式会社 インフォメーションアーキテクト, UXデザイナー）</dd>
+          <dd>伊原 力也<span class="credit-list__work-in">（freee株式会社 インフォメーションアーキテクト, UXデザイナー）</span></dd>
           <dt>ライセンス監修</dt>
-          <dd>数藤 雅彦（五常総合法律事務所 弁護士）</dd>
+          <dd>数藤 雅彦<span class="credit-list__work-in">（五常総合法律事務所 弁護士）</span></dd>
           <dt>制作ディレクション</dt>
-          <dd>カワセ タケヒロ（POLAAR コンセプター, デザイナー）</dd>
+          <dd>カワセ タケヒロ<span class="credit-list__work-in">（POLAAR コンセプター, デザイナー）</span></dd>
         </dl>
       </section>
       <section id="Modified">
