--- a/src/index.njk
+++ b/src/index.njk
@@ -1,10 +1,12 @@
 ---
 date: Last Modified
+url: https://covid-19-act.jp/parenting-who/
 ---
 <!DOCTYPE html>
 <html lang="ja">
 
   <head>
+    {% baseTag url %}
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>新型コロナウイルスから子どもの心を守る。WHOから世界中の保護者たちへ。</title>
