OGPにキャッシュバスターを付与した

--- a/src/parenting-who/index.njk
+++ b/src/parenting-who/index.njk
@@ -13,8 +13,8 @@ date: Last Modified
     <meta property="og:description" content="急な環境の変化や世の中の物々しい雰囲気によって強いストレスを感じたり、不安定になったお子さんとどう接すれば良いのか、悩んでいらっしゃる保護者の方々のために。"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://covid-19-act.jp/parenting-who/"/>
-    <meta property="og:image" content="http://covid-19-act.jp/parenting-who/illustrations/OGP.jpg"/>
-    <meta property="og:image:secure_url" content="https://covid-19-act.jp/parenting-who/illustrations/OGP.jpg"/>
+    <meta property="og:image" content="http://covid-19-act.jp/parenting-who/illustrations/OGP.jpg{% cacheBuster %}"/>
+    <meta property="og:image:secure_url" content="https://covid-19-act.jp/parenting-who/illustrations/OGP.jpg{% cacheBuster %}"/>
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="630"/>
     <meta property="og:image:alt" content="イラスト：両親と二人のこどもが微笑んでいる。家族を波括弧が囲んでいる。"/>
@@ -39,8 +39,8 @@ date: Last Modified
   <body>
     <article>
       <picture>
-        <source srcset="/parenting-who/illustrations/OGP.webp" type="image/webp"/>
-        <img width="1280" height="905" src="/parenting-who/illustrations/OGP.jpg" alt=""/>
+        <source srcset="/parenting-who/illustrations/OGP.webp{% cacheBuster %}" type="image/webp"/>
+        <img width="1280" height="905" src="/parenting-who/illustrations/OGP.jpg{% cacheBuster %}" alt=""/>
       </picture>
       <h1>新型コロナウイルスから子どもの心を守る。<abbr title="World Health Organization">WHO</abbr>から世界中の保護者たちへ。</h1>
       <div>目次</div>
